prometheus/prometheus-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
spec:
  ingressClassNmae: nginx
  rules:
  - host: grafana.waifuprotect.org
    http: 
      paths:
      - path: /
        PathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-grafana
            port:
              number: 80
